feat: change imput serializer auction create
